[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/town/Town.gd" id="1"]

[node name="Town" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.12, 0.14, 1)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -220.0
offset_right = 280.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TownName" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
text = "Town"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="Description" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
text = "A place to rest and recover."
horizontal_alignment = 1
autowrap_mode = 2

[node name="GoldLabel" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
text = "Gold: 0"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBox"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 180)

[node name="PartyList" type="VBoxContainer" parent="Panel/MarginContainer/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBox"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 16

[node name="OptionalBattleButton" type="Button" parent="Panel/MarginContainer/VBox/Buttons"]
layout_mode = 2
custom_minimum_size = Vector2(200, 0)
text = "Optional Battle"

[node name="ShopButton" type="Button" parent="Panel/MarginContainer/VBox/Buttons"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)
text = "Shop"

[node name="RecruitButton" type="Button" parent="Panel/MarginContainer/VBox/Buttons"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)
text = "Recruit"

[node name="ContinueButton" type="Button" parent="Panel/MarginContainer/VBox/Buttons"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)
text = "Continue"
